--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=TwitterCloneDB;User=sa;Password=Password123!;TrustServerCertificate=True;"
+    "postgres": "Server=localhost;Port=5432;Database=TwitterCloneDB;User Id=postgres;Password=Postgres123;"
+
   }
 }
